[tool.poetry]
name = "orbitsimulation"
version = "0.1.0"
description = ""
authors = ["Brusa99 <simone.brusatin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
moonlight = "^0.3.0"
pyjnius = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
